--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@greenpeace/dashdash": "^1.2.1",
-    "@wordpress/components": "^8.5.0",
+    "@wordpress/components": "^25.7.0",
     "@wordpress/e2e-test-utils-playwright": "^0.8.0",
     "@wordpress/eslint-plugin": "^2.3.0",
     "@wordpress/scripts": "3.3.0",
@@ -42,7 +42,8 @@
     "classnames": "^2.2.6",
     "eslint": "^5.16.0",
     "lite-youtube-embed": "^0.1.3",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "react-dom": "^18.2.0"
   },
   "engines": {
     "npm": "<10.0.0",
