--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@greenpeace/dashdash": "^1.2.1",
+    "@playwright/test": "1.37.1",
     "@wordpress/components": "^8.5.0",
     "@wordpress/e2e-test-utils-playwright": "^0.8.0",
     "@wordpress/eslint-plugin": "^2.3.0",
@@ -23,7 +24,7 @@
     "eslint-plugin-react": "^7.20.3",
     "mini-css-extract-plugin": "^0.8.2",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "playwright": "^1.37.1",
+    "playwright": "1.37.1",
     "postcss-loader": "^3.0.0",
     "remove-files-webpack-plugin": "^1.1.3",
     "sass": "^1.57.1",
