--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^3.6.0",
     "dotenv": "^16.3.1",
     "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "mini-css-extract-plugin": "^0.8.2",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "playwright": "^1.37.1",
@@ -40,7 +41,7 @@
   ],
   "dependencies": {
     "classnames": "^2.2.6",
-    "eslint": "^5.16.0",
+    "eslint": "7.15.0",
     "lite-youtube-embed": "^0.1.3",
     "popper.js": "^1.15.0",
     "react-dom": "^18.2.0"
