--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "classnames": "^2.2.6",
     "eslint": "7.15.0",
     "lite-youtube-embed": "^0.3.0",
+    "photoswipe": "^4.1.3",
     "popper.js": "^1.15.0",
     "react-dom": "^18.2.0"
   },
