Update webpack to v5
Update webpack and packages
Update webpack config to match requirements

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -256,6 +256,7 @@ jobs:
             --test-instance $(cat /tmp/workspace/test-instance)
 
   create-zip:
+    resource_class: large
     docker:
       - image: cimg/node:16.19
         auth:
