--- a/package.json
+++ b/package.json
@@ -5,34 +5,37 @@
   "author": "Greenpeace International",
   "license": "GPL-3.0",
   "scripts": {
-    "start": "wp-scripts start --config webpack.config.js",
-    "build": "wp-scripts build --config webpack.config.js --mode production",
+    "start": "wp-scripts start --config webpack.config.js --mode=development",
+    "build": "wp-scripts build --config webpack.config.js --mode=production",
     "lint:css": "wp-scripts lint-style"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.2",
     "@greenpeace/dashdash": "^1.2.1",
     "@playwright/test": "^1.37.1",
+    "@wordpress/block-editor": "^12.16.0",
     "@wordpress/components": "^25.7.0",
     "@wordpress/e2e-test-utils-playwright": "^0.8.0",
+    "@wordpress/element": "^5.25.0",
     "@wordpress/eslint-plugin": "^2.3.0",
-    "@wordpress/scripts": "3.3.0",
+    "@wordpress/scripts": "^26.19.0",
+    "ajv": "^8.7.1",
     "autoprefixer": "^9.6.1",
-    "bootstrap": "^5.1.3",
-    "css-loader": "^3.6.0",
+    "babel-loader": "^8.2.3",
+    "bootstrap": "^5.3.2",
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
     "dotenv": "^16.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "mini-css-extract-plugin": "^0.8.2",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "postcss-loader": "^3.0.0",
-    "remove-files-webpack-plugin": "^1.1.3",
-    "sass": "^1.57.1",
-    "sass-loader": "^8.0.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^6.2.1",
+    "sass": "^1.69.7",
+    "sass-loader": "^13.3.3",
     "svg-sprite-loader": "^6.0.11",
-    "terser-webpack-plugin": "^2.2.1",
-    "webpack": "^4.40.2",
-    "webpack-fix-style-only-entries": "^0.4.0"
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack": "^5.89.0"
   },
   "browserslist": [
     "last 2 version",
