--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "wp-coding-standards/wpcs": "^2.2.0",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
     "phpunit/phpunit": "^7.5||^9.5",
-    "yoast/phpunit-polyfills": "^1.0"
+    "yoast/phpunit-polyfills": "^1.1.0",
+    "doctrine/instantiator": "^1.5.0"
   },
   "require": {},
   "scripts": {
