Update google/apiclient package
Update package to match planet4-base declaration

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
   "name": "greenpeace/planet4-master-theme",
   "description": "Master theme for the Planet 4 Wordpress project",
   "type":"wordpress-theme",
-  "minimum-stability" : "stable",
   "authors": [
     {
       "name": "Greenpeace International",
@@ -36,7 +35,9 @@
     }
   },
   "require": {
-    "google/apiclient": "^2.12"
+    "google/apiclient": "2.15.3",
+    "psr/log": "1.*",
+    "monolog/monolog": "^2.9"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7",
